add OD check in allocation plan service