@@ -4,13 +4,13 @@ import static com.hotstar.adtech.blaze.allocation.planner.metric.MetricNames.QUA
 import static com.hotstar.adtech.blaze.allocation.planner.qualification.index.TargetingEvaluators.buildSsaiTargetingEvaluators;
 
 import com.hotstar.adtech.blaze.admodel.common.enums.PlanType;
-import com.hotstar.adtech.blaze.allocation.planner.common.admodel.AdSet;
 import com.hotstar.adtech.blaze.allocation.planner.common.model.ContentStream;
 import com.hotstar.adtech.blaze.allocation.planner.qualification.index.RequestFeasible;
 import com.hotstar.adtech.blaze.allocation.planner.qualification.index.TargetingEvaluators;
 import com.hotstar.adtech.blaze.allocation.planner.qualification.result.BitSetQualificationResult;
 import com.hotstar.adtech.blaze.allocation.planner.qualification.result.QualificationResult;
 import com.hotstar.adtech.blaze.allocation.planner.source.context.GraphContext;
+import com.hotstar.adtech.blaze.allocationdata.client.model.AdSetRemainImpr;
 import com.hotstar.adtech.blaze.allocationdata.client.model.GeneralPlanContext;
 import io.micrometer.core.annotation.Timed;
 import java.util.BitSet;
@@ -28,15 +28,15 @@ public class SpotQualificationExecutor {
   @Timed(value = QUALIFICATION, extraTags = {"type", "spot"})
   public GraphContext executeQualify(GeneralPlanContext generalPlanContext,
                                      List<Integer> breakTypeIds, Integer duration) {
-    List<AdSet> adSets = generalPlanContext.getAdSets();
-    Map<Integer, AdSet> index2AdSet = adSets.stream().collect(Collectors.toMap(AdSet::getDemandId, adSet -> adSet));
+    Map<Integer, AdSetRemainImpr> index2AdSet = generalPlanContext.buildRemainDeliveryMap();
     List<ContentStream> streams = generalPlanContext.getConcurrencyData().getStreams();
-    Integer relaxedDuration = generalPlanContext.getRelaxedDuration(breakTypeIds.get(0), duration);
+    Integer breakTypeId = breakTypeIds.getFirst();
+    Integer relaxedDuration = generalPlanContext.getRelaxedDuration(breakTypeId, duration);
     TargetingEvaluators targetingEvaluators = buildSsaiTargetingEvaluators(generalPlanContext.getTargetingEvaluators());
 
     List<RequestFeasible> stream = streams
       .stream()
-      .map(contentStream -> streamQualify(contentStream, index2AdSet, relaxedDuration, breakTypeIds.get(0),
+      .map(contentStream -> streamQualify(contentStream, index2AdSet, relaxedDuration, breakTypeId,
         targetingEvaluators))
       .collect(Collectors.toList());
 
@@ -55,10 +55,11 @@ public class SpotQualificationExecutor {
 
   }
 
-  private RequestFeasible streamQualify(ContentStream contentStream, Map<Integer, AdSet> adSets, int relaxedDuration,
+  private RequestFeasible streamQualify(ContentStream contentStream, Map<Integer, AdSetRemainImpr> adSets,
+                                        int relaxedDuration,
                                         Integer breakTypeId, TargetingEvaluators targetingEvaluators) {
-    BitSet qualified = streamQualificationEngine.qualify(contentStream.getPlayoutStream(), adSets,
-      relaxedDuration, breakTypeId, targetingEvaluators);
+    BitSet qualified = streamQualificationEngine.qualify(contentStream.getPlayoutStream(),
+      contentStream.getConcurrency(), adSets, relaxedDuration, breakTypeId, targetingEvaluators);
     return RequestFeasible.builder()
       .bitSet(qualified)
       .supplyId(contentStream.getConcurrencyIdInStream())
